@@ -17,6 +17,7 @@
   * Fixed parsing and display of arg params for some corner cases.  Bug #21113
     by Csiszár Attila.
   * Fixed links in Files box.  Patch #24403 by Eric Wong.
+  * Toplevel methods now appear in Object.  Bug #22677 by Ryan Davis.
 
 === 2.4.1 / 2009-02-26
 
